fixed a perfomance hog, and skills overflow
scaled down the img since it had a really high native resolution (8k) to 480p

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 .App .GoTop {
     position: fixed;
     bottom: 5%;
-    left: 45vw;
+    left: 50%;
     z-index: 10;
     border-radius: 50%;
     /*padding: 1.2rem 0;*/
@@ -107,7 +107,9 @@ html {
 }
 
 @media (max-width: 1024px) {
-
+    .App .GoTop{
+        left: 45%;
+    }
     .cv {
         position: fixed;
         top: unset;
